--- a/HendrixCollege/appsettings.json
+++ b/HendrixCollege/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolContext": "Data Source=SchoolContext-e2484459-e693-4f86-abe4-4f583173414b.db"
+    "SchoolContext": "Data Source=CU.db"
   }
 }
