--- a/HendrixCollege/HendrixCollege.csproj
+++ b/HendrixCollege/HendrixCollege.csproj
@@ -7,10 +7,12 @@
   <ItemGroup>
     <None Remove="Models\" />
     <None Remove="Pages\Students\" />
+    <None Remove="Models\SchoolViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Pages\Students\" />
+    <Folder Include="Models\SchoolViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.11" />
@@ -25,5 +27,14 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Pages\About.cshtml.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="Pages\About.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Pages\About.cshtml.cs" />
   </ItemGroup>
 </Project>
